@@ -10,12 +10,12 @@
       <email>dktrkranz@ubuntu.com</email>
     </author>
     <copyright>
-      <year>2007-2008</year>
+      <year>2007-2009</year>
       <holder>Luca Falavigna</holder>
     </copyright>
     <!-- XXX IMPORTANT XXX -->
     <!-- Keep this date up to date: -->
-    <date>2008-04-26</date>
+    <date>2009-01-26</date>
     <!--  ^^^^^^^^^^ -->
   </refentryinfo>
   <refmeta>
