@@ -10,7 +10,7 @@
       <email>dktrkranz@ubuntu.com</email>
     </author>
     <copyright>
-      <year>2007-2008</year>
+      <year>2007-2009</year>
       <holder>Luca Falavigna</holder>
     </copyright>
     <!-- XXX IMPORTANT XXX -->
